--- a/lab-07-simpsons.Rmd
+++ b/lab-07-simpsons.Rmd
@@ -22,40 +22,40 @@ library(mosaicData)
 
 1.  
 ```{r whickam}
-view(Whickham)
+?Whickham
 ```
     
-Your answer: Observation1 , because we just watching the people and write the notes also we didn't involving in any situation or controlling any variables. 
+Your answer: 
+The data is observational as the description states that is based on age, smoking and mortality , which are all observable events and not produced via experiments. 
 
 2.  
 ```{r observations}
 nrow(Whickham)
 ```
 
-Your answer; 1314 , represent recorded participants' age, smoking status at baseline .
+Your answer; There are 1.314 observations. As we know every row is an observation. 
 
 3.  
 
 ```{r number_variables}
-ncol(Whickham)
+names(Whickham)
 ```
 
 Your answer: (3)
- 
- [1] "outcome"  "smoker" "age"  
+There are 3 variables , "outcome" ,"smoker" , "age"
 
 
 ```{r var_type}
-class(Whickham$age)
-class(Whickham$smoker)
-class(Whickham$outcome)
+unique(Whickham$outcome)
+unique(Whickham$smoker)
+unique(Whickham$age)
 
 ```
 
 Your answer:
-outcome and smoker and age  
-outcome and smoker are (Categorical) and are (Factor)
-age it's (Numerical) and (Integer) 
+Using the `unique()` function on the 3 variables we could see that "outcome" only takes Alive or Dead value , which makes it categorical non-ordinal. "smoker" only takes Yes or NO , which also makes it categorical non-ordinal . Age is numerical continues data. 
+
+one of the best ways to visualise categorical data is through the use of bar charts.
 
 ```{r plot_outcome}
 ggplot(Whickham, aes(x = outcome)) +
@@ -65,13 +65,13 @@ ggplot(Whickham, aes(x = outcome)) +
 
 
 ```{r plot_smoker}
-ggplot(Whickham, aes(x = age)) +
+ggplot(Whickham, aes(x = smoker)) +
   geom_bar()
 
 ```
 
 ```{r plot_age}
-ggplot(Whickham, aes(x = smoker)) +
+ggplot(Whickham, aes(x = age)) +
   geom_bar()
 
 ```
